Walidacja na pokojach

--- a/GrecosQuestionnaire/Views/Account/Login.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Login.cshtml
@@ -33,6 +33,9 @@
                             </div>
                         </div>
                         <button type="submit" class="btn btn-danger">Login</button>
+                        <div>
+                            <a asp-action="ForgotPassword">Forgot Password?</a>
+                        </div>
                     </form>
                 </div>
             </div>
