--- a/GrecosQuestionnaire/Views/Account/ConfirmEmail.cshtml
+++ b/GrecosQuestionnaire/Views/Account/ConfirmEmail.cshtml
@@ -1,2 +1,5 @@
-﻿<h3>Thanks you for confirming your email</h3>
-<a href="/Home/Login">Go to Login</a>
+﻿<div class="text-center">
+    <h3>Thanks you for confirming your email</h3>
+    <h3>Please set password. Click <a asp-action="ForgotPassword">here to set</a></h3>
+    <h3>or login. Click <a asp-action="Login">here to login</a></h3>
+</div>
