--- a/GrecosQuestionnaire/Views/Account/Edit.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Edit.cshtml
@@ -3,53 +3,55 @@
 @{
     ViewBag.Title = "Edit User";
 }
+<div class="container">
+    <form method="post" class="mt-3">
 
-<form method="post" class="mt-3">
-
-    <div class="form-group row">
-        <label asp-for="Id" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Id" disabled class="form-control" />
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <label asp-for="Name" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-    </div>
-
-    <div asp-validation-summary="All" class="text-danger"></div>
-
-    <div class="form-group row">
-        <div class="col-md-10">
-            <button type="submit" class="btn btn-primary">Update</button>
-            <a asp-action="Index" class="btn btn-primary">Cancel</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-            <h3>Partners</h3>
-        </div>
-        <div class="card-body">
-            @if (Model.Partners.Any())
-            {
-                foreach (var partner in Model.Partners)
-                {
-                    <h5 class="card-title">@partner</h5>
-                }
-            }
-            else
-            {
-                <h5 class="card-title">None at the moment</h5>
-
-            }
-            <div class="card-footer">
-                <a asp-action="EditPartnerInUser" asp-controller="Account" asp-route-userId="@Model.Id" class="btn btn-primary" style="width:auto">Add or remove partners</a>
-
+        <div class="form-group row">
+            <label asp-for="Id" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Id" disabled class="form-control" />
             </div>
         </div>
-</form>
+
+        <div class="form-group row">
+            <label asp-for="Name" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+        </div>
+
+        <div asp-validation-summary="All" class="text-danger"></div>
+
+        <div class="form-group row">
+            <div class="col-md-10">
+                <button type="submit" class="btn btn-primary">Update</button>
+                <a asp-action="Index" class="btn btn-primary">Cancel</a>
+                <a asp-action="ResendRegister" asp-route-userid="@Model.Id" class="btn btn-primary">Resend register email</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h3>Partners</h3>
+            </div>
+            <div class="card-body">
+                @if (Model.Partners.Any())
+                {
+                    foreach (var partner in Model.Partners)
+                    {
+                        <h5 class="card-title">@partner</h5>
+                    }
+                }
+                else
+                {
+                    <h5 class="card-title">None at the moment</h5>
+
+                }
+                <div class="card-footer">
+                    <a asp-action="EditPartnerInUser" asp-controller="Account" asp-route-userId="@Model.Id" class="btn btn-primary" style="width:auto">Add or remove partners</a>
+
+                </div>
+            </div>
+    </form>
+    </div>
