--- a/GrecosQuestionnaire/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GrecosQuestionnaire/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,8 @@
-﻿<h4>
-    If you have an account with us, we have sent an email
-    with the instruction to reset your password.
-</h4>
+﻿<div class="text-center">
+    <h4>
+        If you have an account with us, we have sent an email
+        with the instruction to reset your password.
+    </h4>
+
+    <a href="/Account/Login">Go to Login</a>
+</div>
