--- a/GrecosQuestionnaire/Views/Account/ResetPassword.cshtml
+++ b/GrecosQuestionnaire/Views/Account/ResetPassword.cshtml
@@ -1,26 +1,27 @@
 ﻿@model GrecosQuestionnaire.ViewModel.ResetPasswordViewModel
+    <div class="container">
+        <div class="text-center">
+            <h2>Reset Password</h2>
 
-    <h2>Reset Password</h2>
-
-    <div class="row">
-        <div class="row" style="align-items:center">
-            <div class="col-md-12" style="text-align:center">
-                <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <input asp-for="Token" type="hidden" />
-                    <input asp-for="Email" type="hidden" />
-                    <div class="form-group">
-                        <label asp-for="Password"></label>
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="ConfirmPassword"></label>
-                        <input asp-for="ConfirmPassword" class="form-control" />
-                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Reset</button>
-                </form>
+            <div class="row" style="align-items:center">
+                <div class="col-md-12" style="text-align:center">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <input asp-for="Token" type="hidden" />
+                        <input asp-for="Email" type="hidden" />
+                        <div class="form-group">
+                            <label asp-for="Password"></label>
+                            <input asp-for="Password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ConfirmPassword"></label>
+                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Reset</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
