--- a/GrecosQuestionnaire/Views/Survey/Index - Copy.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index - Copy.cshtml
@@ -584,7 +584,7 @@
                                             </div>
                                         </div>
                                     }
-                                    else if (item.QuestionItemType == QuestionItemType.DistanceBox)
+                                    else if (item.QuestionItemType == QuestionItemType.DistanceBoxM)
                                     {
                                         <div class="form-group row">
                                             <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item.Title</label>
@@ -1088,7 +1088,7 @@
                                                         </div>
                                                     </div>
                                                 }
-                                                else if (item1.QuestionItemType == QuestionItemType.DistanceBox)
+                                                else if (item1.QuestionItemType == QuestionItemType.DistanceBoxM)
                                                 {
                                                     <div class="form-group row">
                                                         <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
