--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -6,11 +6,9 @@
     Layout = "_LayoutSurvey";
 }
 
-
 @{
-    ViewBag.Title = "Ankieta";
+    ViewBag.Title = "Questionnaire";
 }
-
 
 <div class="col-md-3"></div>
 
@@ -34,9 +32,9 @@
     @Html.ValidationSummary()
 </div>
 
-<div class="container ">
+<div class="container">
     <div class="row justify-content-md-center">
-        <div class="col-md-8" style="margin-top: 40px; ">
+        <div class="col-md-8" style="margin-top: 40px;">
 
             @using (Html.BeginForm("Index", "Survey", FormMethod.Post, new { role = "form", @style = "color: #005EA8" }))
             {
@@ -123,7 +121,6 @@
                                 @{ int i = 0;}
                                 @foreach (var item in question.Items)
                                 {
-
                                     if (item.Parts == 0)
                                     {
                                         item.Parts = 7;
@@ -135,6 +132,7 @@
                                     }
 
                                     string itemValue = ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)] != null ? ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)].ToString() : string.Empty;
+
 
                                     if (item.QuestionItemType == QuestionItemType.Rate5)
                                     {
@@ -588,13 +586,24 @@
                                             </div>
                                         </div>
                                     }
-                                    else if (item.QuestionItemType == QuestionItemType.DistanceBox)
+                                    else if (item.QuestionItemType == QuestionItemType.DistanceBoxM)
                                     {
                                         <div class="form-group row">
                                             <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px ; ">@item.Title</label>
                                             <div class="col-sm-6">
                                                 <span class="input-symbol-m">
-                                                    <input type="number" step="0.01" min="0" class="form-control" id="distancebox" placeholder="0,00" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                    <input type="number" step="0.01" min="0.00" class="form-control" id="distancebox" placeholder="0,00" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                </span>
+                                            </div>
+                                        </div>
+                                    }
+                                    else if (item.QuestionItemType == QuestionItemType.DistanceBoxKM)
+                                    {
+                                        <div class="form-group row">
+                                            <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px ; ">@item.Title</label>
+                                            <div class="col-sm-6">
+                                                <span class="input-symbol-km">
+                                                    <input type="number" step="1" min="0" class="form-control" id="distancebox" placeholder="0" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
                                                 </span>
                                             </div>
                                         </div>
@@ -831,9 +840,6 @@
                                         </div>
                                     }
                                     i++;
-
-
-
 
                                     <div class="col-sm-4 text-danger text-center" style="font-size: 10px">
                                         @Html.ValidationMessage(item.Id.ToString(), "*Field is required")
@@ -1092,12 +1098,23 @@
                                                         </div>
                                                     </div>
                                                 }
-                                                else if (item1.QuestionItemType == QuestionItemType.DistanceBox)
+                                                else if (item1.QuestionItemType == QuestionItemType.DistanceBoxM)
                                                 {
                                                     <div class="form-group row">
                                                         <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
                                                         <div class="col-sm-6">
                                                             <span class="input-symbol-m">
+                                                                <input type="number" step="0.01" min="0.00" class="form-control" id="distancebox" placeholder="0,00" name="@(item1.Id + "q")" value="@ViewData[(item1.Id + "q").ToString(CultureInfo.InvariantCulture)]" />
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                }
+                                                else if (item1.QuestionItemType == QuestionItemType.DistanceBoxKM)
+                                                {
+                                                    <div class="form-group row">
+                                                        <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
+                                                        <div class="col-sm-6">
+                                                            <span class="input-symbol-km">
                                                                 <input type="number" step="1" min="0" class="form-control" id="distancebox" placeholder="0" name="@(item1.Id + "q")" value="@ViewData[(item1.Id + "q").ToString(CultureInfo.InvariantCulture)]" />
                                                             </span>
                                                         </div>
